--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "social-network",
   "version": "1.0.0",
   "description": "Social Network @ Laboratoria",
-  "main": "docs/index.html",
+  "main": "src/index.html",
   "keywords": [
     "javascript",
     "firebase",
@@ -11,12 +11,12 @@
   "license": "MIT",
   "scripts": {
     "htmlhint": "htmlhint dist/*.html ",
-    "eslint": "eslint --ext .js docs/ test/",
-    "stylelint": "stylelint --aei docs/**/*.css",
+    "eslint": "eslint --ext .js src/ test/",
+    "stylelint": "stylelint --aei src/**/*.css",
     "pretest": "npm run htmlhint && npm run eslint && npm run stylelint",
     "test": "jest --coverage",
-    "start": "serve -s docs/",
-    "deploy": "gh-pages -d docs"
+    "start": "serve -s src/",
+    "deploy": "gh-pages -d src"
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
